--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "@heroicons/react": "^2.0.18",
+        "convert-csv-to-json": "^2.0.0",
         "next": "13.4.19",
         "react": "18.2.0",
         "react-dom": "18.2.0"
