--- a/package.json
+++ b/package.json
@@ -15,24 +15,28 @@
     "dependencies": {
         "@heroicons/react": "^2.0.18",
         "convert-csv-to-json": "^2.0.0",
+        "lodash": "^4.17.21",
+        "luxon": "^3.4.3",
         "next": "13.4.19",
         "react": "18.2.0",
         "react-dom": "18.2.0"
     },
     "devDependencies": {
         "@trivago/prettier-plugin-sort-imports": "^4.2.0",
+        "@types/lodash": "^4.14.199",
+        "@types/luxon": "^3.3.2",
         "@types/node": "20.6.2",
         "@types/react": "18.2.21",
         "@types/react-dom": "18.2.7",
-        "@typescript-eslint/eslint-plugin": "^6.7.0",
-        "@typescript-eslint/parser": "^6.7.0",
-        "autoprefixer": "10.4.15",
-        "eslint": "8.49.0",
-        "eslint-config-next": "13.4.19",
-        "postcss": "8.4.29",
+        "@typescript-eslint/eslint-plugin": "^6.7.3",
+        "@typescript-eslint/parser": "^6.7.3",
+        "autoprefixer": "^10.4.15",
+        "eslint": "^8.49.0",
+        "eslint-config-next": "^13.4.19",
+        "postcss": "^8.4.29",
         "prettier": "^3.0.3",
         "prettier-plugin-tailwindcss": "^0.5.4",
         "tailwindcss": "3.3.3",
-        "typescript": "5.2.2"
+        "typescript": "^5.2.2"
     }
 }
