Add start of NS price API

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "@heroicons/react": "^2.0.18",
+        "ajv": "^8.12.0",
         "convert-csv-to-json": "^2.0.0",
         "lodash": "^4.17.21",
         "luxon": "^3.4.3",
@@ -23,19 +24,19 @@
     },
     "devDependencies": {
         "@trivago/prettier-plugin-sort-imports": "^4.2.0",
-        "@types/lodash": "^4.14.199",
-        "@types/luxon": "^3.3.2",
+        "@types/lodash": "^4.14.200",
+        "@types/luxon": "^3.3.3",
         "@types/node": "20.6.2",
         "@types/react": "18.2.21",
         "@types/react-dom": "18.2.7",
-        "@typescript-eslint/eslint-plugin": "^6.7.3",
-        "@typescript-eslint/parser": "^6.7.3",
-        "autoprefixer": "^10.4.15",
-        "eslint": "^8.49.0",
-        "eslint-config-next": "^13.4.19",
+        "@typescript-eslint/eslint-plugin": "^6.8.0",
+        "@typescript-eslint/parser": "^6.8.0",
+        "autoprefixer": "^10.4.16",
+        "eslint": "^8.51.0",
+        "eslint-config-next": "^13.5.6",
         "postcss": "^8.4.31",
         "prettier": "^3.0.3",
-        "prettier-plugin-tailwindcss": "^0.5.4",
+        "prettier-plugin-tailwindcss": "^0.5.6",
         "tailwindcss": "3.3.3",
         "typescript": "^5.2.2"
     }
