--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "lodash": "^4.17.21",
         "luxon": "^3.4.3",
         "next": "13.5.4",
+        "next-intl": "^3.0.0-beta.19",
         "react": "18.2.0",
         "react-dom": "18.2.0"
     },
