--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     },
     "dependencies": {
         "@heroicons/react": "^2.0.18",
+        "@prisma/client": "^5.5.2",
+        "@t3-oss/env-nextjs": "^0.7.1",
         "ajv": "^8.12.0",
         "convert-csv-to-json": "^2.0.0",
         "lodash": "^4.17.21",
         "luxon": "^3.4.3",
         "next": "^14.0.0",
-        "next-intl": "^3.0.0-beta.19",
+        "next-intl": "^3.0.0-rc.6",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "zod": "^3.22.4"
     },
     "devDependencies": {
         "@trivago/prettier-plugin-sort-imports": "^4.2.1",
@@ -38,6 +41,7 @@
         "postcss": "^8.4.31",
         "prettier": "^3.0.3",
         "prettier-plugin-tailwindcss": "^0.5.6",
+        "prisma": "^5.5.2",
         "tailwindcss": "^3.3.5",
         "typescript": "^5.2.2"
     }
