--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
         "@heroicons/react": "^2.0.18",
         "@prisma/client": "^5.5.2",
         "@t3-oss/env-nextjs": "^0.7.1",
+        "@tanstack/react-query": "^4.36.1",
+        "@trpc/client": "^10.43.0",
+        "@trpc/next": "^10.43.0",
+        "@trpc/react-query": "^10.43.0",
+        "@trpc/server": "^10.43.0",
         "ajv": "^8.12.0",
         "convert-csv-to-json": "^2.0.0",
         "lodash": "^4.17.21",
@@ -24,6 +29,7 @@
         "next-intl": "^3.0.0-rc.6",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "superjson": "^2.2.0",
         "zod": "^3.22.4"
     },
     "devDependencies": {
