--- a/package.json
+++ b/package.json
@@ -44,5 +44,10 @@
         "prisma": "^5.5.2",
         "tailwindcss": "^3.3.5",
         "typescript": "^5.2.2"
-    }
+    },
+    "overrides": {
+        "next-intl": {
+          "next": "^14.0.0"
+        }
+      }
 }
