--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,23 @@
 {
     "root": true,
-    "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "next/core-web-vitals"],
+    "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended-type-checked", "next/core-web-vitals"],
     "parser": "@typescript-eslint/parser",
     "plugins": ["@typescript-eslint"],
+    "parserOptions": {
+        "project": true
+    },
     "rules": {
         "@typescript-eslint/consistent-type-imports": [
             "warn",
             {
                 "prefer": "type-imports",
                 "fixStyle": "inline-type-imports"
+            }
+        ],
+        "@typescript-eslint/no-misused-promises": [
+            "error",
+            {
+                "checksVoidReturn": false
             }
         ],
         "@typescript-eslint/no-unused-vars": ["warn", {"argsIgnorePattern": "^_"}]
