--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "eslint-config-next": "^14.0.0",
         "postcss": "^8.4.31",
         "prettier": "^3.0.3",
+        "prettier-plugin-sort-json": "^3.1.0",
         "prettier-plugin-tailwindcss": "^0.5.6",
         "prisma": "^5.5.2",
         "tailwindcss": "^3.3.5",
