--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,11 @@ name: ci
 on:
     push:
         branches:
+            - main
             - production
     pull_request:
         branches:
+            - main
             - production
 
 jobs:
@@ -53,8 +55,6 @@ jobs:
                   registry: ghcr.io
                   username: ${{ github.actor }}
                   password: ${{ secrets.GITHUB_TOKEN }}
-                  # username: ${{ secrets.GH_CONTAINER_REGISTRY_USER }}
-                  # password: ${{ secrets.GH_CONTAINER_REGISTRY_TOKEN }}
             - name: Tag Docker image with branch name
               run: |
                   DOCKER_IMAGE=ghcr.io/${{ github.repository }}
