--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
     build:
-        runs-on: ubuntu-latest
+        runs-on: self-hosted
         steps:
             - name: Checkout
               uses: actions/checkout@v4
@@ -46,7 +46,7 @@ jobs:
     publish:
         # needs: test
         needs: build
-        runs-on: ubuntu-latest
+        runs-on: self-hosted
         if: ${{ github.ref == 'refs/heads/production' }}
         steps:
             - name: Login to GitHub Container Registry
