Migrate to Tailwind v4

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "zod": "^4.0.0"
     },
     "devDependencies": {
+        "@tailwindcss/postcss": "^4.1.11",
         "@trivago/prettier-plugin-sort-imports": "^5.0.0",
         "@types/lodash": "^4.14.200",
         "@types/luxon": "^3.3.3",
@@ -41,7 +42,6 @@
         "@types/react-dom": "^18.2.14",
         "@typescript-eslint/eslint-plugin": "^7.0.0",
         "@typescript-eslint/parser": "^7.0.0",
-        "autoprefixer": "^10.4.16",
         "eslint": "^8.53.0",
         "eslint-config-next": "^15.0.0",
         "postcss": "^8.4.31",
@@ -49,7 +49,7 @@
         "prettier-plugin-sort-json": "^4.0.0",
         "prettier-plugin-tailwindcss": "^0.6.0",
         "prisma": "^6.0.0",
-        "tailwindcss": "^4.0.0",
+        "tailwindcss": "^4.1.11",
         "typescript": "^5.2.2"
     }
 }
