--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,14 @@
             "~/*": ["./src/*"]
         }
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.d.ts", "**/*.tsx", ".next/types/**/*.ts"],
+    "include": [
+        "**/*.ts",
+        "**/*.d.ts",
+        "**/*.tsx",
+        ".next/types/**/*.ts",
+        "next-env.d.ts",
+        "eslint.config.mjs",
+        "postcss.config.js"
+    ],
     "exclude": ["node_modules"]
 }
