--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "name": "ns-flex-insights",
     "version": "0.1.0",
     "description": "Insight into NS Flex travel costs.",
-    "author": "Nixy <info@nixy.software>",
-    "repository": "github:NixySoftware/ns-flex-insights",
+    "author": "Danielle Huisman <danielle@huisman.me>",
+    "repository": "github:DanielleHuisman/ns-flex-insights",
     "license": "MIT",
     "private": true,
     "scripts": {
